Favicon and icon added

--- a/ITPE3200X/ITPE3200X.csproj
+++ b/ITPE3200X/ITPE3200X.csproj
@@ -24,4 +24,10 @@
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="wwwroot\favicon.ico" />
+      <None Include="wwwroot\Icons-images\icon.png" />
+      <None Include="wwwroot\Icons-images\kage_welcome_vector.png" />
+    </ItemGroup>
+
 </Project>
