--- a/ITPE3200X/ITPE3200X.csproj
+++ b/ITPE3200X/ITPE3200X.csproj
@@ -81,4 +81,8 @@
       <None Remove="obj\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\uploads\" />
+    </ItemGroup>
+
 </Project>
