Endret til å beholde db

--- a/ITPE3200X/ITPE3200X.csproj
+++ b/ITPE3200X/ITPE3200X.csproj
@@ -83,6 +83,7 @@
 
     <ItemGroup>
       <Folder Include="wwwroot\uploads\" />
+      <Folder Include="wwwroot\uploads\profile_pictures\" />
     </ItemGroup>
 
 </Project>
